Adjusted headers. Fixed alignment and border-left issues.

--- a/walkgoodjamaica/sass/main.scss
+++ b/walkgoodjamaica/sass/main.scss
@@ -7,11 +7,30 @@ a {
 
 /**Headings**/
 h1, h2, h3, h6 {
-	border-left: solid $main-yellow 0.4rem;
+	/*border-left: solid $main-yellow 0.4rem;*/
 	padding: 0 0 0 0.5rem;
 	margin-bottom:2rem;
 	font-weight:600;
+	text-align:center;
+	position:relative;
+	display:inline-block;
+	min-width:10%;
+	margin-left:auto;
+	margin-right:auto;
+
+	&:before {
+	width:0.3rem;
+	height:90%;
+	content:"";
+	background-color:$main-yellow;
+	position:absolute !important;
+	left:0;
+	top:0;
+	vertical-align: middle;
+	}
 }
+
+
 
 /**wrapper for content sections**/
 .content-wrapper {
@@ -78,11 +97,6 @@ header h2.right {
 /**Styles for individual sections**/
 
 /**Styles for report section**/
-.report-header{
-	 margin:2rem;
-}
-
-
 #forth-icon-section{
 	padding-top:1rem;
 }
@@ -94,9 +108,7 @@ header h2.right {
   padding: 0.5rem 0;
   color: #ffffff !important;
   h6 {
-    padding-left: 0.3rem;
     color: #ffffff;
-    font-weight: bold;
     font-size: 1rem;
     margin-bottom: 1rem;
   }
